--- a/luxchef/index.html
+++ b/luxchef/index.html
@@ -336,7 +336,8 @@ text-shadow: 0 2px 4px rgba(0,0,0,.3);
  <link rel="stylesheet" href="fonts/Cookit.css"> <link rel="stylesheet" href="fonts/Arciform.css">
  <link rel="stylesheet" href="fonts/Century-Gothic.css"> <link rel="stylesheet" href="fonts/vw/vw.css"> 
  <link rel="stylesheet" href="gdigital/gdigital_novo/fonts/fontawesome/css/all.minbd4a.css?ver=2.1.6.3">
-  <link rel="stylesheet" href="/offer/style.min">
+  <link rel="stylesheet" href="/offer/style.min.css">
+	  <link rel="stylesheet" href="/offer/default.min.css">
  
  <link rel="stylesheet" href="../cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.0/css/bootstrap-slider.min.css"> 
  <style> /*Confs especificas*/ /* Menu Fixo*/ @media screen and (max-width: 600px) { .linha_fixa .navbar-header button{ float: right; right: 10px; position: fixed; } 
